<resources>
    <string name="app_name">Android UI Design</string>
    <string name="splash_screen_title_text_nutrice">Nutrice.</string>
    <string name="splash_screen_tagline_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tincidunt et, volutpat duis amet, risus.</string>
    <string name="splash_screen_btn_txt_continue">Continue</string>
    <string name="onboarding_title_item_one">Completed Categories and Easy to Find Delicious Food</string>
    <string name="onboarding_des_item_one">You can find a full range of categories and delicious and easy-to-find foods around you.</string>
    <string name="onboarding_title_item_two">Many Coupons You Can Use with Big Discounts</string>
    <string name="onboarding_des_item_two">There are many discount coupons that you can use with big discount.</string>
    <string name="onboarding_title_item_three">Face Id Feature for Easy Access and Secure Transactions</string>
    <string name="onboarding_des_item_three">There is a face ID feature that can be used with easy access and safe transactions.</string>
    <string name="splash_screen_btn_txt_get_started">Get Started</string>
    <string name="txtview_header_sign_in">Sign in</string>
    <string name="txtview_signnin_tagline">Please sign in first to enjoy the service.</string>
    <string name="txtview_text_email">Email</string>
    <string name="txtview_text_password">Password</string>
    <string name="checkbox_text_remeber_me">Remember me?</string>
    <string name="textview_text_forgot_password">Forgot password?</string>
    <string name="btn_text_sign_in">Sign In</string>
    <string name="btn_text_face_id">Continue with Face Id</string>
    <string name="btn_text_google">Continue with Google</string>
    <string name="btn_text_facebook">Continue with Facebook</string>
    <string name="textview_text_sign_in">Sign in</string>
    <string name="textview_text_sign_up">Sign up</string>
    <string name="textview_text_not_have_account">I don’t have a account? Sign up</string>
    <string name="textview_text_i_have_account">I have an account? Sign in </string>
    <string name="textview_text_signup_tagline">Please sign up first to enjoy the service.</string>
    <string name="textview_text_full_name">Full Name</string>
    <string name="password_status_strong">Strong</string>
    <string name="textview_text_confirm_password">Confirm Password</string>
    <string name="textview_text_phone_number">Phone Number</string>
    <string name="terms_and_condtion_text_checkbox"><![CDATA[I accepted all terms & conditions.]]></string>
    <string name="password_type_weak">Weak</string>
    <string name="password_type_medium">Medium</string>
    <string name="empty">""</string>
    <string name="numeric_regex">[0-9]</string>
    <string name="small_alphabet_regex">[a-z]</string>
    <string name="upper_alphabet_regex">[A-Z]</string>
    <string name="signup_btn_clicked">Signup Button Clicked</string>
    <string name="toast_name_empty">Name Empty</string>
    <string name="toast_email_empty">Email Empty</string>
    <string name="toast_password_empty">password Empty</string>
    <string name="toast_confirm_password">Confirm Password Empty</string>
    <string name="toast_phone_empty">Enter Phone Number</string>
    <string name="toast_valid_phone">Enter Valid Phone number</string>
    <string name="text_or">or</string>
    <string name="sign_in_btn_clicked">Sign In Button Clicked</string>
    <string name="face_id_clicked">Face Id Clicked</string>
    <string name="facebook_clicked">FaceBook Button  Clicked</string>
    <string name="google_clicked">Google Button Clicked</string>
    <string name="textview_forgot_password">Forgot password</string>
    <string name="textview_text_forget_password_tag_line">Please choose one way to find your password again.</string>
    <string name="sample_email">********@mail.com</string>
    <string name="txt_view_text_phone_number">Phone Number</string>
    <string name="txt_sample_phone">**** **** **** 2345</string>
    <string name="textview_text_do_you_remember">Do you remember your password? Sign in</string>
    <string name="toast_text_send_code">Send Code Button Clicked</string>
    <string name="textview_text_verfication_header">Verification code</string>
    <string name="textview_text_verfication_tag_line">Please check your phone. We have to sent the code verification to your mobile number.</string>
    <string name="textview_text_verfication_tag_line_email">Please check your Email. We have to sent the code verification to your Email.</string>
    <string name="textview_text_resend_code_timer">Resend code in 00:56</string>
    <string name="brn_text_verify">Verify</string>
    <string name="text_view_text_update_number">Wrong phone number? Update number</string>
    <string name="text_view_text_update_email">Wrong email? Update email</string>
    <string name="toast_enter_otp">Enter OTP</string>
    <string name="toast_verfication_button_tapped">You are Verified Change Password</string>
    <string name="text_resend_code">Resend Code in %s</string>
    <string name="text_view_text_your_location">Your Location</string>
    <string name="text_view_text_sample_location">Jl. Mahakarya No.21</string>
    <string name="text_view_wallet_name">Nutpay</string>
    <string name="sample_amout">$156,340.80</string>
    <string name="text_view_text_top_up">Top up</string>
    <string name="text_view_text_pay">Pay</string>
    <string name="text_view_text_categories">Categories</string>
    <string name="text_view_text_recommendation">Recommendations near you</string>
    <string name="text_view_text_recommendation_tag_line">We choose delicious and close to you.</string>
    <string name="text_view_text_see_all">See all</string>
    <string name="text_view_text_ideal_discount">There is 1 idle discount</string>
    <string name="categories_name">Takasimuraaa</string>
    <string name="text_view_text_categories_tag_line">We choose cheap food for you</string>
    <string name="categories_title_one">Lalapan Akang Slamet</string>
    <string name="distance_1_02">1.02 km</string>
    <string name="text_8_mins">8 min</string>
    <string name="text_4_9_rating">4.9</string>
    <string name="categories_item_one_rating">6rb+ ratings</string>
    <string name="text_discount_fifteen">15%</string>
    <string name="categories_item_two">Nasi Goreng  Dower, Rumbai</string>
    <string name="text_14_mins">14 mins</string>
    <string name="categories_item_three">Rocket Chicken Kayu Manis</string>
    <string name="toasr_see_all_clicked">See All Recommendation Clicked</string>
    <string name="toast_see_all_categories_clicked">see All Categoried Clicked</string>
    <string name="toast_pay_button_tapped">Pay Button tapped</string>
    <string name="toast_plus_button_tapped">Plus Button Tapped</string>
    <string name="toast_email_not_valid">Email is Not Valid</string>
    <string name="resturant_name_sample">Bamboo Restaurant</string>
    <string name="resurant_des_one"><![CDATA[Rice, chicken & duck, Snacks]]></string>
    <string name="four_five_rating">4.5</string>
    <string name="zero_one_kelometer">0.1 km</string>
    <string name="thirteen_minutes">13 min</string>
    <string name="text_family_package">Super Family Package</string>
    <string name="zero_quantity">0</string>
    <string name="json_content_type">Content-Type</string>
    <string name="content_type_json">application/json</string>
    <string name="food_item_description">2 Chicken Wings, 2 Rice, ...</string>
    <string name="name_key">name</string>
    <string name="email_key">email</string>
    <string name="password_key">password</string>
    <string name="result_ok">OK</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_unsuccessful">Invalid Credentials Please Try Again</string>
    <string name="user_created_message">User Created SuccessFully</string>
    <string name="user_not_created">Sorry User not Created Please Try Again</string>
    <string name="text_api_response">API Response</string>
    <string name="validation_sucessful">Data is Valid</string>
    <string name="otp_time_format">%02d:%02d</string>
    <string name="text_view_text_set_new_password">Set New Password</string>
    <string name="text_view_text_set_new_password_tag_line">Create your new password so you can share your memories again.</string>
    <string name="btn_text_change_password">Change Password</string>
    <string name="text_change_password_clicked">Change Password Button Clicked</string>
    <string name="text_password_confirm_password_not_equal">Password and Confirm Password is not equal</string>
    <string name="text_request_again">Please Request Again for OTP</string>
    <string name="terms_and_condition_not_checked">Please Agree Terms and Condition</string>
</resources>