<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".authencation.SignInActivity">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_signIn_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:fontFamily="@font/manropebold"
                android:text="@string/txtview_header_sign_in"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_signIn_tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/txtview_signnin_tagline"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_signIn_header" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_signIn_email_header"
                style="@style/edit_text_header"
                android:text="@string/txtview_text_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_signIn_tagline" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edi_txt_signIn_email"
                style="@style/edit_textStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/cursor_style"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_signIn_email_header" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_signIn_password_header"
                style="@style/edit_text_header"
                android:text="@string/txtview_text_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edi_txt_signIn_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_signIn_password_header"
                app:passwordToggleEnabled="true">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editxt_signIn_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/_10ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:buttonTint="@color/grey"
                android:text="@string/checkbox_text_remeber_me"
                android:textColor="@color/grey"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_layout_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:fontFamily="@font/manropesemibold"
                android:text="@string/textview_text_forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_layout_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/manropebold"
                android:text="@string/btn_text_sign_in"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@id/textview_forget_password" />

            <View
                android:id="@+id/view_starting"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@color/grey"
                app:layout_constraintEnd_toStartOf="@id/textview_Or"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_signIn" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_Or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:fontFamily="@font/manropemedium"
                android:text="@string/text_or"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toStartOf="@id/view_ending"
                app:layout_constraintStart_toEndOf="@id/view_starting"
                app:layout_constraintTop_toBottomOf="@id/btn_signIn" />

            <View
                android:id="@+id/view_ending"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_24sdp"
                android:background="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textview_Or"
                app:layout_constraintTop_toBottomOf="@id/btn_signIn" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_face_id"
                style="@style/social_media_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/face_id_icone"
                android:fontFamily="@font/manropemedium"
                android:paddingStart="@dimen/_50sdp"
                android:text="@string/btn_text_face_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_Or" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_google"
                style="@style/social_media_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/google_icone"
                android:paddingStart="@dimen/_50sdp"
                android:text="@string/btn_text_google"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_face_id" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_facebook"
                style="@style/social_media_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableStart="@drawable/facebook_icone"
                android:paddingStart="@dimen/_50sdp"
                android:text="@string/btn_text_facebook"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_google" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_not_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:fontFamily="@font/manropemedium"
                android:text="@string/textview_text_not_have_account"
                android:textColor="@color/grey"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_facebook" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>